[package]
authors       = ["museun <museun@outlook.com>"]
categories    = ["development-tools::cargo-plugins", "development-tools"]
description   = "display features, versions and dependencies of crates"
documentation = "https://docs.rs/cargo-whatfeatures/latest/cargo-whatfeatures/"
edition       = "2018"
keywords      = ["features", "dependencies", "crates", "cargo", "cargo-subcommand"]
license       = "MIT OR Apache-2.0"
name          = "cargo-whatfeatures"
readme        = "README.md"
repository    = "https://github.com/museun/whatfeatures"
version       = "0.9.6"

[[bin]]
name = "cargo-whatfeatures"
path = "src/bin/whatfeatures/main.rs"

[features]
default    = ["native-tls"]
native-tls = ["attohttpc/tls"]
rustls     = ["attohttpc/tls-rustls"]

[dependencies]
anyhow              = "1.0.44"
attohttpc           = { version = "0.17.0", default-features = false, features = ["json", "compress"] }
cargo_metadata      = "0.14.0"
crate_version_parse = "0.2.0"
directories-next    = "2.0.0"
flate2              = "1.0.22"
home                = "0.5.3"
pico-args           = "0.4.2"
serde               = { version = "1.0.130", features = ["derive"] }
tar                 = "0.4.37"
time                = "=0.2.27"
yansi               = "0.5.0"
